--- a/html/interior.html
+++ b/html/interior.html
@@ -42,23 +42,54 @@
 
         <div class="main-container">
             <div class="main clearfix">
-
-                <section class="hero">
-                	<div class="content">
-	                    <form method="post" action="">
-	                    	<h2>Join The Campaign</h2>
-	                        <ul>
-		                        <li>
-		                        	<input id="email" type="text" name="email" required placeholder="Email" />
-		                        </li>
-		                        <li>
-		                        	<input id="zip" type="text" name="zip" required placeholder="Zip" />
-		                        </li>
-		                        <button class="btn">Stand With Kim</button>
-	                        </ul>
-	                    </form>
-                    </div>
-                </section>
+				<section class="hero" style="background-image: url('img/landscape.jpg');">
+				</section>
+				<section class="main-content">
+					<article class="content">
+				        <h2>Common Sense for Upstate New York</h2>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+				        <a href="#" class="btn">Read More</a>
+				    </article>
+				    <div class="sidebar">
+				    	<form method="post" action="">
+				    		<h2>Join The Campaign</h2>
+				    	    <ul>
+				    	        <li>
+				    	        	<input id="email" type="text" name="email" required placeholder="Email" />
+				    	        </li>
+				    	        <li>
+				    	        	<input id="zip" type="text" name="zip" required placeholder="Zip" />
+				    	        </li>
+				    	        <button class="btn">Stand With Kim</button>
+				    	    </ul>
+				    	</form>
+				    	<div class="twitter">
+				    		<h2><a href="http://twitter.com/KimForCongress" class="handle">@KimForCongress</a></h2>
+				    		<div class="tweet">
+				    			<p>Upstate NY has given so much to me & my family. I want to give back by putting NY families & jobs first. Learn more <a href="http://www.myersforcongress.com">http://www.myersforcongress.com</a>.</p>
+				    			<span class="date">One Day Ago</span>
+				    		</div>
+				    		<a href="http://twitter.com/KimForCongress" class="btn">Follow Kim</a>
+				    	</div>
+				    	<div class="support">
+				    		<h2>Show Your Support</h2>
+				    		<p>Add your name to our list of supporters on Facebook.</p>
+				    		<ul>
+				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
+				    		</ul>
+				    		<a href="#" class="btn">Join Kim</a>
+				    	</div>
+				    </div>
+				</section>
                 <section class="donate">
                 	<div class="content">
 	                    <h2>Donate Now!</h2>
@@ -70,53 +101,7 @@
 	                    	<a href="#"><li>$50</li></a>
 	                    </ol>
                     </div>
-                </section>
-                <section class="about clearfix">
-                	<article class="content">
-	                    <h2>Common Sense for Upstate New York</h2>
-	                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
-	                    <a href="#" class="btn">Read More</a>
-                    </article>
-                </section>
-                <section class="photo-gallery">
-                	<div class="content">
-	                	<ul>
-		                	<li>
-			                	<img src="http://placehold.it/60x60" alt="" />
-		                	</li>
-		                	<li>
-		                		<img src="http://placehold.it/60x60" alt="" />
-		                	</li>
-		                	<li>
-		                		<img src="http://placehold.it/60x60" alt="" />
-		                	</li>
-	                	</ul>
-					</div>
-                </section>
-                <section>
-                	<div class="twitter">
-                		<h2><a href="http://twitter.com/KimForCongress" class="handle">@KimForCongress</a></h2>
-                		<div class="tweet">
-                    		<p>Upstate NY has given so much to me & my family. I want to give back by putting NY families & jobs first. Learn more <a href="http://www.myersforcongress.com">http://www.myersforcongress.com</a>.</p>
-                    		<span class="date">One Day Ago</span>
-                		</div>
-                		<a href="http://twitter.com/KimForCongress" class="btn">Follow Kim</a>
-                	</div>
-                </section>
-                <section>
-                	<div class="support">
-                		<h2>Show Your Support</h2>
-                		<p>Add your name to our list of supporters on Facebook.</p>
-                		<ul>
-                			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
-                			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
-                			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
-                			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
-                			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
-                		</ul>
-                		<a href="#" class="btn">Join Kim</a>
-                	</div>
-                </section>
+				</section>
             </div>
         </div>
 
@@ -143,7 +128,7 @@
                 	    <li class="facebook"><a href="#"><img src="img/facebook-icon.png" alt="Facebook" /></a></li>
                 	</ul>
                 </nav>
-                <p class="paid-for">PAID FOR BY KIM MYERS FOR CONGRESS. PO BOX 1255, VESTAL, NY 13850.</dd>
+                <p class="paid-for">Paid for by Kim Myers for congress. PO BOX 1255, Vestal, NY 13850.</dd>
             </footer>
         </div>
 
