--- a/html/index.html
+++ b/html/index.html
@@ -8,11 +8,11 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
-
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="https://use.typekit.net/jbm7pcy.js"></script>
+        <script>try{Typekit.load({ async: true });}catch(e){}</script>
     </head>
     <body class="home">
         <div class="header-container">
@@ -23,8 +23,8 @@
                 </h1>
                 <nav class="social">
                     <ul>
-                        <li class="twitter"><a href="#"><img src="img/twitter-icon.png" alt="Twitter" /></a></li>
                         <li class="facebook"><a href="#"><img src="img/facebook-icon.png" alt="Facebook" /></a></li>
+                        <li class="twitter"><a href="#"><img src="img/twitter-icon.png" alt="Twitter" /></a></li>
                     </ul>
                 </nav>
                 <nav class="main">
@@ -34,7 +34,7 @@
                         <li><a href="#">News</a></li>
                         <li><a href="#">Endorsements</a></li>
                         <li><a href="#">Take Action</a></li>
-                        <li class="donate"><a href="#">Donate</a></li>
+                        <li class="last"><a href="#">Donate</a></li>
                     </ul>
                 </nav>
             </header>
@@ -44,7 +44,7 @@
             <div class="main clearfix">
 
                 <section class="hero">
-                	<div class="content">
+                	<div class="content clearfix">
 	                    <form method="post" action="">
 	                    	<h2>Join The Campaign</h2>
 	                        <ul>
@@ -54,7 +54,7 @@
 		                        <li>
 		                        	<input id="zip" type="text" name="zip" required placeholder="Zip" />
 		                        </li>
-		                        <button class="btn">Stand With Kim</button>
+		                        <input type="button" value="Stand With Kim"/>
 	                        </ul>
 	                    </form>
                     </div>
