--- a/html/interior.html
+++ b/html/interior.html
@@ -4,14 +4,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Kim Myers for Congress</title>
+        <title>Interior - Kim Myers for Congress</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
-
+		<script src="https://use.typekit.net/jbm7pcy.js"></script>
+		<script>try{Typekit.load({ async: true });}catch(e){}</script>
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body class="home">
@@ -46,9 +46,18 @@
 				</section>
 				<section class="main-content">
 					<article class="content">
-				        <h2>Common Sense for Upstate New York</h2>
+				        <h1>Heading One</h1>
 				        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
-				        <a href="#" class="btn">Read More</a>
+				        <img src="http://placehold.it/700x260" alt="" />
+				        <h2>Heading Two</h2>
+				        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				        <h3>Heading Three</h3>
+				        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lau`dantium.</p>
+				        <p>Totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+				        <h4>Heading Four</h4>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+				        <h5>Heading Five</h5>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
 				    </article>
 				    <div class="sidebar">
 				    	<form method="post" action="">
