--- a/html/index.html
+++ b/html/index.html
@@ -46,7 +46,7 @@
                 <section class="hero">
                 	<div class="content clearfix">
 	                    <form method="post" action="">
-	                    	<h2>Join The Campaign</h2>
+	                    	<h2><span class="star"></span>Join The Campaign<span class="star right"></span></h2>
 	                        <ul>
 		                        <li>
 		                        	<input id="email" type="text" name="email" required placeholder="Email" />
