Finish styling and starting on Drupal integration

--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
                 </nav>
                 <nav class="main">
                     <ul>
-                        <li><a href="about.html">Meet Kim</a></li>
+                        <li><a href="interior.html">Meet Kim</a></li>
                         <li><a href="#">Issues</a></li>
                         <li><a href="#">News</a></li>
                         <li><a href="#">Endorsements</a></li>
@@ -59,15 +59,15 @@
 	                    </form>
                     </div>
                 </section>
-                <section class="donate">
+                <section class="donate clearfix">
                 	<div class="content">
-	                    <h2>Donate Now!</h2>
+	                    <h2>Donate Now</h2>
 	                    <p>Click an option to get started. If you’ve saved your payment information with ActBlue Express, your donation will go through immediately.</p>
 	                    <ol>
-	                    	<a href="#"><li>$5</li></a>
-	                    	<a href="#"><li>$10</li></a>
-	                    	<a href="#"><li>$25</li></a>
-	                    	<a href="#"><li>$50</li></a>
+	                    	<li><a href="#">$5</a></li>
+	                    	<li><a href="#">$10</a></li>
+	                    	<li><a href="#">$25</a></li>
+	                    	<li><a href="#">$50</a></li>
 	                    </ol>
                     </div>
                 </section>
@@ -78,33 +78,44 @@
 	                    <a href="#" class="btn">Read More</a>
                     </article>
                 </section>
-                <section class="photo-gallery">
-                	<div class="content">
-	                	<ul>
-		                	<li>
-			                	<img src="http://placehold.it/60x60" alt="" />
+                <section class="photo-gallery clearfix">
+                	<div class="content clearfix">
+	                		<ul class="left">
+	                			<li style="background: url('http://placehold.it/527x263') no-repeat center top;">
+	                				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod aliqua.</p>
+	                			</li>
+	                			<li style="background: url('http://placehold.it/527x263') no-repeat center top;">
+	                				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod aliqua.</p>
+	                			</li>
+	                			<li style="background: url('http://placehold.it/527x263') no-repeat center top;">
+	                				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod aliqua.</p>
+	                			</li>
+	                		</ul>
+		                <ul class="right">
+		                	<li style="background: url('http://placehold.it/547x410') no-repeat center top;">
+		                		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod aliqua.</p>
 		                	</li>
-		                	<li>
-		                		<img src="http://placehold.it/60x60" alt="" />
-		                	</li>
-		                	<li>
-		                		<img src="http://placehold.it/60x60" alt="" />
-		                	</li>
-	                	</ul>
+		                    <li style="background: url('http://placehold.it/547x410') no-repeat center top;">
+		                    	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod aliqua.</p>
+		                    </li>
+		                </ul>
 					</div>
                 </section>
-                <section>
-                	<div class="twitter">
+                <section class="twitter clearfix">
+                	<div class="content">
                 		<h2><a href="http://twitter.com/KimForCongress" class="handle">@KimForCongress</a></h2>
                 		<div class="tweet">
                     		<p>Upstate NY has given so much to me & my family. I want to give back by putting NY families & jobs first. Learn more <a href="http://www.myersforcongress.com">http://www.myersforcongress.com</a>.</p>
                     		<span class="date">One Day Ago</span>
                 		</div>
                 		<a href="http://twitter.com/KimForCongress" class="btn">Follow Kim</a>
+                		<div class="controls">
+                			<a href="#" class="arrow-left"><img src="img/arrow-left.png" alt="" /></a><a href="#" class="arrow-right"><img src="img/arrow-right.png" alt="" /></a>
+                		</div>
                 	</div>
                 </section>
-                <section>
-                	<div class="support">
+                <section class="support">
+                	<div class="content">
                 		<h2>Show Your Support</h2>
                 		<p>Add your name to our list of supporters on Facebook.</p>
                 		<ul>
@@ -123,8 +134,8 @@
         <div class="footer-container">
             <footer class="content">
                 <h3>
-                	<img src="img/footer-logo.png" alt="Kim Myers for Congress" class="logo"/>
-	                <span class="visuallyhidden">Kim Myers for Congress</span>
+                	<img src="img/logo.png" alt="Kim Myers for Congress" class="logo" />
+                	<span class="visuallyhidden">Kim Myers for Congress</span>
 	            </h3>
                 <nav class="main">
                     <ul>
@@ -133,14 +144,14 @@
                         <li><a href="#">News</a></li>
                         <li><a href="#">Endorsements</a></li>
                         <li><a href="#">Take Action</a></li>
-                        <li class="donate"><a href="#">Donate</a></li>
+                        <li class="give"><a href="#">Donate</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                     </ul>
                 </nav>
                 <nav class="social">
                 	<ul>
-                	    <li class="twitter"><a href="#"><img src="img/twitter-icon.png" alt="Twitter" /></a></li>
                 	    <li class="facebook"><a href="#"><img src="img/facebook-icon.png" alt="Facebook" /></a></li>
+                	    <li class="twitter"><a href="#"><img src="img/twitter-icon.png" alt="Twitter" /></a></li>
                 	</ul>
                 </nav>
                 <p class="paid-for">PAID FOR BY KIM MYERS FOR CONGRESS. PO BOX 1255, VESTAL, NY 13850.</dd>
