--- a/html/interior.html
+++ b/html/interior.html
@@ -14,7 +14,7 @@
 		<script>try{Typekit.load({ async: true });}catch(e){}</script>
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
-    <body class="home">
+    <body class="interior">
         <div class="header-container">
             <header class="clearfix">
                 <h1>
@@ -23,8 +23,8 @@
                 </h1>
                 <nav class="social">
                     <ul>
-                        <li class="twitter"><a href="#"><img src="img/twitter-icon.png" alt="Twitter" /></a></li>
                         <li class="facebook"><a href="#"><img src="img/facebook-icon.png" alt="Facebook" /></a></li>
+                        <li class="twitter"><a href="#"><img src="img/twitter-icon.png" alt="Twitter" /></a></li>
                     </ul>
                 </nav>
                 <nav class="main">
@@ -34,7 +34,7 @@
                         <li><a href="#">News</a></li>
                         <li><a href="#">Endorsements</a></li>
                         <li><a href="#">Take Action</a></li>
-                        <li class="donate"><a href="#">Donate</a></li>
+                        <li class="last"><a href="#">Donate</a></li>
                     </ul>
                 </nav>
             </header>
@@ -42,10 +42,10 @@
 
         <div class="main-container">
             <div class="main clearfix">
-				<section class="hero" style="background-image: url('img/landscape.jpg');">
+				<section class="hero" style="background-image: url('img/balloon-photo.jpg');">
 				</section>
-				<section class="main-content">
-					<article class="content">
+				<section class="main-content content">
+					<article>
 				        <h1>Heading One</h1>
 				        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
 				        <img src="http://placehold.it/700x260" alt="" />
@@ -59,9 +59,10 @@
 				        <h5>Heading Five</h5>
 				        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
 				    </article>
-				    <div class="sidebar">
-				    	<form method="post" action="">
-				    		<h2>Join The Campaign</h2>
+				    <div class="sidebar clearfix">
+				    	<form class="clearfix" method="post" action="">
+				    		<h2>Join Kim</h2>
+				    		<p>Sign up for email alerts and stay updated on the latest campaign news.</p>
 				    	    <ul>
 				    	        <li>
 				    	        	<input id="email" type="text" name="email" required placeholder="Email" />
@@ -69,10 +70,11 @@
 				    	        <li>
 				    	        	<input id="zip" type="text" name="zip" required placeholder="Zip" />
 				    	        </li>
-				    	        <button class="btn">Stand With Kim</button>
+				    	        <input type="button" value="Join Kim"/>
 				    	    </ul>
 				    	</form>
 				    	<div class="twitter">
+				    		<img src="img/twitter-lg-icon.png" alt="Twitter" />
 				    		<h2><a href="http://twitter.com/KimForCongress" class="handle">@KimForCongress</a></h2>
 				    		<div class="tweet">
 				    			<p>Upstate NY has given so much to me & my family. I want to give back by putting NY families & jobs first. Learn more <a href="http://www.myersforcongress.com">http://www.myersforcongress.com</a>.</p>
@@ -84,41 +86,41 @@
 				    		<h2>Show Your Support</h2>
 				    		<p>Add your name to our list of supporters on Facebook.</p>
 				    		<ul>
-				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
-				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
-				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
-				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
-				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
-				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
-				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
-				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
-				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
-				    			<li><a href="#"><img src="http://placehold.it/60x60" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/55x55" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/55x55" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/55x55" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/55x55" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/55x55" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/55x55" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/55x55" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/55x55" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/55x55" alt="" /></a></li>
+				    			<li><a href="#"><img src="http://placehold.it/55x55" alt="" /></a></li>
 				    		</ul>
 				    		<a href="#" class="btn">Join Kim</a>
 				    	</div>
 				    </div>
 				</section>
-                <section class="donate">
+                <section class="donate clearfix">
                 	<div class="content">
-	                    <h2>Donate Now!</h2>
-	                    <p>Click an option to get started. If you’ve saved your payment information with ActBlue Express, your donation will go through immediately.</p>
-	                    <ol>
-	                    	<a href="#"><li>$5</li></a>
-	                    	<a href="#"><li>$10</li></a>
-	                    	<a href="#"><li>$25</li></a>
-	                    	<a href="#"><li>$50</li></a>
-	                    </ol>
+                        <h2>Donate Now</h2>
+                        <p>Click an option to get started. If you’ve saved your payment information with ActBlue Express, your donation will go through immediately.</p>
+                        <ol>
+                        	<li><a href="#">$5</a></li>
+                        	<li><a href="#">$10</a></li>
+                        	<li><a href="#">$25</a></li>
+                        	<li><a href="#">$50</a></li>
+                        </ol>
                     </div>
-				</section>
+                </section>
             </div>
         </div>
 
         <div class="footer-container">
             <footer class="content">
                 <h3>
-                	<img src="img/footer-logo.png" alt="Kim Myers for Congress" class="logo"/>
-	                <span class="visuallyhidden">Kim Myers for Congress</span>
+                	<img src="img/logo.png" alt="Kim Myers for Congress" class="logo" />
+                	<span class="visuallyhidden">Kim Myers for Congress</span>
 	            </h3>
                 <nav class="main">
                     <ul>
@@ -127,17 +129,17 @@
                         <li><a href="#">News</a></li>
                         <li><a href="#">Endorsements</a></li>
                         <li><a href="#">Take Action</a></li>
-                        <li class="donate"><a href="#">Donate</a></li>
+                        <li class="give"><a href="#">Donate</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                     </ul>
                 </nav>
                 <nav class="social">
                 	<ul>
-                	    <li class="twitter"><a href="#"><img src="img/twitter-icon.png" alt="Twitter" /></a></li>
                 	    <li class="facebook"><a href="#"><img src="img/facebook-icon.png" alt="Facebook" /></a></li>
+                	    <li class="twitter"><a href="#"><img src="img/twitter-icon.png" alt="Twitter" /></a></li>
                 	</ul>
                 </nav>
-                <p class="paid-for">Paid for by Kim Myers for congress. PO BOX 1255, Vestal, NY 13850.</dd>
+                <p class="paid-for">PAID FOR BY KIM MYERS FOR CONGRESS. PO BOX 1255, VESTAL, NY 13850.</dd>
             </footer>
         </div>
 
@@ -158,3 +160,4 @@
         </script>
     </body>
 </html>
+        
